WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246552
REGRESSION: Netflix incorrect layout (size & location) when starting playback
https://bugs.webkit.org/show_bug.cgi?id=246552
Summary
REGRESSION: Netflix incorrect layout (size & location) when starting playback
Jer Noble
Reported
2022-10-14 17:26:39 PDT
REGRESSION: Netflix incorrect layout (size & location) when starting playback
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2022-10-14 17:26:49 PDT
<
rdar://problem/100770538
>
Jer Noble
Comment 2
2022-10-14 17:33:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5405
EWS
Comment 3
2022-10-17 10:58:30 PDT
Committed
255635@main
(c97fbc8c36ec): <
https://commits.webkit.org/255635@main
> Reviewed commits have been landed. Closing PR #5405 and removing active labels.
Johannes Odland
Comment 4
2022-11-07 23:58:06 PST
Could this be related to
https://bugs.webkit.org/show_bug.cgi?id=240604
? Hoping the PR solved 240604 as well.
Ahmad Saleem
Comment 5
2022-11-17 04:16:08 PST
***
Bug 240604
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug