Cherry-pick c97fbc8c36ec. rdar://problem/100770538

REGRESSION: Netflix incorrect layout (size & location) when starting playback
    https://bugs.webkit.org/show_bug.cgi?id=246552
    rdar://100770538

    Reviewed by Eric Carlson.

    The first layout after creating a video layer for a HTMLMediaElement goes through -[WKVideoLayerRemote layoutSublayers],
    which tries to avoid doing synchronous messaging from the host process to the GPU process by creating an affine transform
    which will convert the existing layout size to the destination layout size. However, in the case where the initial size is
    empty, it's impossible to create a correct transform. What's worse is that the initial size isn't actually empty; it's just
    never been reported up from the GPU process to the host process.

    Additionally, the concept of "what size should I make my layer" is hopelessly confused; many places inside WebCore/platform
    use playerContentBoxRect().size(), but this is the size of the HTMLMediaElement's content box, not the video box, and this
    will be dramatically incorrect if the page specifies a object-fit: value.

    Rename MediaPlayer::size()/setSize() to presentationSize()/setPresentationSize(), to remove a bit of ambiguity about what
    this value is. Pass these new methods through MediaPlayerPrivateRemote/RemoteMediaPlayerProxy, and provide the value in
    RemoteMediaPlayerProxyConfiguration, so it's available at RemoteMediaPlayerProxy creation time.

    Send a message back up from the GPU process when the video layer is resized, to let the host process know what the "initial"
    size of the remote layer is during layout.

    * Source/WebCore/html/HTMLMediaElement.cpp:
    (WebCore::HTMLMediaElement::updateMediaPlayer):
    * Source/WebCore/platform/graphics/MediaPlayer.cpp:
    (WebCore::MediaPlayer::setPresentationSize):
    (WebCore::MediaPlayer::setSize): Deleted.
    * Source/WebCore/platform/graphics/MediaPlayer.h:
    * Source/WebCore/platform/graphics/MediaPlayerPrivate.h:
    (WebCore::MediaPlayerPrivateInterface::setPresentationSize):
    (WebCore::MediaPlayerPrivateInterface::setSize): Deleted.
    * Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
    (WebCore::MediaPlayerPrivateAVFoundationObjC::createAVPlayerLayer):
    * Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.h:
    * Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
    (WebCore::MediaPlayerPrivateMediaSourceAVFObjC::setPresentationSize):
    (WebCore::MediaPlayerPrivateMediaSourceAVFObjC::ensureLayer):
    (WebCore::MediaPlayerPrivateMediaSourceAVFObjC::playerContentBoxRectChanged): Deleted.
    * Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaStreamAVFObjC.mm:
    (WebCore::MediaPlayerPrivateMediaStreamAVFObjC::ensureLayers):
    * Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.h:
    * Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.mm:
    (WebCore::MediaPlayerPrivateWebM::shouldEnsureLayer const):
    (WebCore::MediaPlayerPrivateWebM::setPresentationSize):
    (WebCore::MediaPlayerPrivateWebM::ensureLayer):
    (WebCore::MediaPlayerPrivateWebM::playerContentBoxRectChanged): Deleted.
    * Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
    (WebCore::MediaPlayerPrivateGStreamer::setPresentationSize):
    (WebCore::MediaPlayerPrivateGStreamer::setSize): Deleted.
    * Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h:
    * Source/WebCore/platform/mock/mediasource/MockMediaPlayerMediaSource.cpp:
    (WebCore::MockMediaPlayerMediaSource::setPresentationSize):
    (WebCore::MockMediaPlayerMediaSource::setSize): Deleted.
    * Source/WebCore/platform/mock/mediasource/MockMediaPlayerMediaSource.h:
    * Source/WebKit/GPUProcess/media/RemoteMediaPlayerProxy.cpp:
    (WebKit::RemoteMediaPlayerProxy::RemoteMediaPlayerProxy):
    (WebKit::RemoteMediaPlayerProxy::setPresentationSize):
    * Source/WebKit/GPUProcess/media/RemoteMediaPlayerProxy.h:
    * Source/WebKit/GPUProcess/media/RemoteMediaPlayerProxy.messages.in:
    * Source/WebKit/GPUProcess/media/RemoteMediaPlayerProxyConfiguration.h:
    (WebKit::RemoteMediaPlayerProxyConfiguration::encode const):
    (WebKit::RemoteMediaPlayerProxyConfiguration::decode):
    * Source/WebKit/GPUProcess/media/cocoa/RemoteMediaPlayerProxyCocoa.mm:
    (WebKit::RemoteMediaPlayerProxy::mediaPlayerRenderingModeChanged):
    * Source/WebKit/WebProcess/GPU/media/MediaPlayerPrivateRemote.cpp:
    (WebKit::MediaPlayerPrivateRemote::prepareForPlayback):
    (WebKit::MediaPlayerPrivateRemote::setPresentationSize):
    * Source/WebKit/WebProcess/GPU/media/MediaPlayerPrivateRemote.h:
    * Source/WebKit/WebProcess/GPU/media/MediaPlayerPrivateRemote.messages.in:
    * Source/WebKit/WebProcess/GPU/media/RemoteMediaPlayerManager.cpp:
    (WebKit::RemoteMediaPlayerManager::createRemoteMediaPlayer):
    * Source/WebKit/WebProcess/GPU/media/cocoa/MediaPlayerPrivateRemoteCocoa.mm:
    (WebKit::MediaPlayerPrivateRemote::videoInlineSizeChanged):
    * Source/WebKit/WebProcess/GPU/media/cocoa/VideoLayerRemoteCocoa.mm:
    (-[WKVideoLayerRemote layoutSublayers]):
    * Tools/WebKitTestRunner/WebKitTestRunner.xcodeproj/xcshareddata/xcschemes/WebKitTestRunner.xcscheme:

    Canonical link: https://commits.webkit.org/255635@main

Canonical link: https://commits.webkit.org/252432.656@safari-7614-branch