Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.mm
@@ -624,15 +624,15 @@ bool MediaPlayerPrivateWebM::shouldEnsureLayer() const
 #if HAVE(AVSAMPLEBUFFERDISPLAYLAYER_COPYDISPLAYEDPIXELBUFFER)
     return isCopyDisplayedPixelBufferAvailable()
         && ((m_displayLayer && !CGRectIsEmpty([m_displayLayer bounds]))
-            || !m_player->playerContentBoxRect().isEmpty());
+            || !m_player->presentationSize().isEmpty());
 #else
     return !m_hasBeenAskedToPaintGL;
 #endif
 }
 
-void MediaPlayerPrivateWebM::playerContentBoxRectChanged(const LayoutRect& newRect)
+void MediaPlayerPrivateWebM::setPresentationSize(const IntSize& newSize)
 {
-    if (m_hasVideo && !m_displayLayer && !newRect.isEmpty())
+    if (m_hasVideo && !m_displayLayer && !newSize.isEmpty())
         updateDisplayLayerAndDecompressionSession();
 }
 
@@ -1260,7 +1260,7 @@ void MediaPlayerPrivateWebM::ensureLayer()
     if (m_enabledVideoTrackID != notFound)
         reenqueSamples(m_enabledVideoTrackID);
 
-    m_videoLayerManager->setVideoLayer(m_displayLayer.get(), snappedIntRect(m_player->playerContentBoxRect()).size());
+    m_videoLayerManager->setVideoLayer(m_displayLayer.get(), m_player->presentationSize());
     m_player->renderingModeChanged();
 }
 
